initial work on clients

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -102,6 +102,7 @@
   },
   "include": [
     "lib/**/*.ts"
+    //"index.ts"
   ] /* Specify an array of glob patterns that match files to include. */,
   "exclude": [
     "node_modules/*",
