--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smoltalk",
-  "version": "0.0.28",
+  "version": "0.0.3",
   "description": "A common interface for LLM APIs",
   "homepage": "https://github.com/egonSchiele/smoltalk",
   "scripts": {
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "egonlog": "^0.0.2",
     "openai": "^6.15.0"
   }
 }
