--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:tsc": "tsc -p tests/tsconfig.json",
     "coverage": "vitest --coverage",
     "build": "rm -rf dist && tsc",
-    "start": "cd dist && node index.js"
+    "start": "cd dist && node index.js",
+    "doc": "typedoc --disableSources --out docs lib"
   },
   "files": [
     "./dist"
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "^25.0.3",
     "termcolors": "github:egonSchiele/termcolors",
+    "typedoc": "^0.28.15",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16",
     "zod": "^4.3.5"
