--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smoltalk",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A common interface for LLM APIs",
   "homepage": "https://github.com/egonSchiele/smoltalk",
   "scripts": {
@@ -42,6 +42,7 @@
   "dependencies": {
     "@google/genai": "^1.34.0",
     "egonlog": "^0.0.2",
+    "ollama": "^0.6.3",
     "openai": "^6.15.0"
   }
 }
