--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "coverage": "vitest --coverage",
     "build": "rm -rf dist && tsc",
     "start": "cd dist && node index.js",
-    "doc": "typedoc --disableSources --out docs lib && prettier docs/ --write"
+    "doc": "typedoc --disableSources --out docs lib && prettier docs/ --write",
+    "typecheck": "tsc --noEmit"
   },
   "files": [
     "./dist"
